--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,16 +8,18 @@
   
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring/spring.xml</param-value>
-	</context-param>  
+		<param-value>classpath:spring/spring.xml
+                    classpath:spring/spring-mvc.xml
+                    classpath:spring/spring-security.xml</param-value>
+	</context-param>
 	
 	<servlet>
         <servlet-name>spring-mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:/spring/spring-mvc.xml</param-value>
-		</init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:/spring/spring-mvc.xml</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
@@ -34,7 +36,18 @@
 	    <filter-name>httpMethodFilter</filter-name>
 	    <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
 	</filter>
-	
+
+    <!-- Spring Security -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 	<filter-mapping>
 	    <filter-name>httpMethodFilter</filter-name>
 	    <servlet-name>spring-mvc</servlet-name>
