--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,4 +63,9 @@
         <location>/WEB-INF/error/404.jsp</location>
     </error-page>
 
+    <error-page>
+        <error-code>403</error-code>
+        <location>/WEB-INF/error/403.jsp</location>
+    </error-page>
+
 </web-app>
