--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,18 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         version="3.0"
+         version="2.5"
          metadata-complete="true">
 
     <display-name>Garage e-paye</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/spring.xml
+        <param-value>
+            classpath:spring/spring.xml
             classpath:spring/spring-mvc.xml
-            classpath:spring/spring-security.xml</param-value>
+            classpath:spring/spring-security.xml
+        </param-value>
     </context-param>
 
     <servlet>
